--- a/about.css
+++ b/about.css
@@ -129,8 +129,7 @@ nav span {
 }
 .about p{
     background-color: white;
-    font-size: 15px;
-    padding: 15px;
+    padding: 10px;
 }
 .about span{
     font-size: 12px;
@@ -164,14 +163,14 @@ nav span {
 .logo-span h4{
     color: #EC5242;
     font-size: 40px;
-    margin-bottom: 15px;
+    padding-bottom: 15px;
 }
 .span{
     width: 40%;
     margin: auto;
 }
 .logo{
-    width: 50%;
+    width: 250px;
     border: 2px solid whitesmoke;
     margin: auto;
     text-align: center;
@@ -179,9 +178,11 @@ nav span {
 
 }
 .logo img{
-    width: 70%;
+    width: 100%;
 }
-
+.see{
+    padding-top: 40px;
+}
 .see-div{
     width: 50%;
     margin: auto;
@@ -198,16 +199,18 @@ nav span {
 }
 
 .see-img{
-
-    display: flex;
-    border: 1px solid rebeccapurple;
+   display: flex;
+    
     justify-content: space-evenly;
     
 }
-.see-img img{
-    width: 400px;
+.see-img div{
+    width:40%;
     padding: 10px;
-    border: 1px solid green;
+    
+}
+.see-img img{
+    width: 100%;
 }
 .program{
     margin: 40px 0;
@@ -232,23 +235,14 @@ footer a:hover{
 }
 
 @media (max-width:779.33px) {
-    #abt {
-        position: fixed;
-        left: -150px;
-        width: 150px;
-        transition: .5s;
-        top: 70px;
-    }
-    .con .but {
-        display: flex;
-    }
+  
 }
 @media (max-width:1029.33px) {
     .details{
         flex-direction: column;
     }
     .details div{
-        width: 100%;
+        
         min-height: 300px;
         
     }
@@ -338,7 +332,7 @@ footer a:hover{
     color: #EC5242;
 }
  
-.enroll{
+/* .enroll{
     background-color: rgb(70,45,116);
     width: 350px;
     padding: 7px;
@@ -380,7 +374,7 @@ background-color: rgba(230,80,66,0.3);
 }
 .details div:hover{
     transform: scale(1.02);
-}
+} */
 @media (max-width:1019.33px) {
    /* .abt-sect-two{
     display: block;
